Added error message on bad login

--- a/firefly-frontend/src/i18n/en.json
+++ b/firefly-frontend/src/i18n/en.json
@@ -21,7 +21,8 @@
     "validation": {
       "email": "Please enter an email.",
       "password": "Please enter a password."
-    }
+    },
+    "badLogin": "Bad login credentials!"
   },
   "user": {
     "email": "Email",
