Added visual feedback on password change attempts

--- a/firefly-frontend/src/i18n/en.json
+++ b/firefly-frontend/src/i18n/en.json
@@ -38,7 +38,9 @@
       "newPassword": "Please enter your new password.",
       "newPasswordRepeat": "Please repeat your new password.",
       "passwordMatch": "The passwords don't match."
-    }
+    },
+    "badPassword": "The provided old password is wrong.",
+    "passwordChanged": "Password successfully changed!"
   },
   "themes": {
     "dark": "Dark",
