Changed admin page paths to have the `/admin` route

--- a/firefly-frontend/src/i18n/en.json
+++ b/firefly-frontend/src/i18n/en.json
@@ -15,8 +15,7 @@
     "transactions": "Transactions",
     "trends": "Trends",
     "admin": "Administration",
-    "user-admin": "Users",
-    "account-admin": "Accounts",
+    "users": "Users",
     "language": "Language",
     "theme": "Theme",
     "back": "back",
